--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\heros\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
+    "python.pythonPath": "/bin/python"
 }
