Added flag to Rain, Rainbow, Rave, and Gradcycle

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,18 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "OnlyRam",
-            "type": "python",
-            "request": "launch",
-            "program": "${file}",
-            "console": "integratedTerminal",
-            "args": [
-                "--only-set",
-                "corsair vengeance pro rgb"
-            ]
-        },
-        {
-            "name": "Find errors",
+            "name": "Vanilla",
             "type": "python",
             "request": "launch",
             "program": "${file}",
@@ -30,24 +19,26 @@
             "console": "integratedTerminal",
             "args": [
                 "--reversed",
-                "asrock polychome v2",
+                "debug dram",
             ]
         },
         {
-            "name": "AllArgs",
+            "name": "Reverse testing(with custom colors)",
             "type": "python",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
                 "--reversed",
-                "corsair vengeance pro rgb",
-                "--only-set",
-                "corsair vengeance pro rgb"
+                "debug dram",
+                "--C1",
+                "0", "255","0",
+                "--C2",
+                "255","0","0"
             ]
         },
         {
-            "name": "AllArgs(Debug)",
+            "name": "AllArgs",
             "type": "python",
             "request": "launch",
             "program": "${file}",
@@ -60,7 +51,7 @@
             ]
         },
         {
-            "name": "OnlyRam(debug)",
+            "name": "OnlyRam",
             "type": "python",
             "request": "launch",
             "program": "${file}",
